# EdgeAdapt

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_platform_profiler.md
.github/workflows/: ci.yml  release.yml
benchmarks/: generate_dummy_models.py
benchmarks/sample_models/: dummy_high.onnx  dummy_low.onnx  dummy_medium.onnx
docs/: api_reference.md  architecture.md  benchmarking.md  contributing.md  gap_analysis.md  index.md  mkdocs.yml  platform.md  policies.md  quickstart.md  roadmap.md  swap_lifecycle.md
examples/: basic_usage.py  benchmark_device.py  custom_policy.py  family.yaml  yaml_config_example.py
python/edgeadapt/: __init__.py  engine.py  logging_config.py  observability.py  swap_codes.py  version.py
python/edgeadapt/backends/: __init__.py  base.py  onnx_backend.py
python/edgeadapt/benchmark/: __init__.py  runner.py
python/edgeadapt/cli/: __init__.py  main.py
python/edgeadapt/policy/: __init__.py  base.py  presets.py  stability.py
python/edgeadapt/profiler/: __init__.py  android.py  base.py  browser.py  ios.py  linux.py
python/edgeadapt/registry/: __init__.py  constants.py  family.py  yaml_loader.py
python/edgeadapt/swapper/: __init__.py  swapper.py
rust/edgeadapt_core/: Cargo.toml
rust/edgeadapt_core/src/: lib.rs  utils.rs
rust/edgeadapt_core/src/profiler/: linux.rs  mod.rs  types.rs
rust/edgeadapt_core/src/swapper/: hot_swap.rs  mod.rs
tests/python/: conftest.py  test_backend_contract.py  test_benchmark_runner.py  test_cli.py  test_engine_integration.py  test_matrix_failures.py  test_onnx_backend.py  test_policy.py  test_profiler.py  test_registry.py  test_swap_matrix.py  test_swapper.py  test_tooling.py
(+3 files in other folders)
