[package]
name = "edgeadapt_core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust core for edgeadapt: profiler and hot-swap primitives (PyO3)"

[lib]
name = "edgeadapt_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }

